--- a/Website/Website/Website/Views/Shared/HeaderPartial.cshtml
+++ b/Website/Website/Website/Views/Shared/HeaderPartial.cshtml
@@ -3,8 +3,12 @@
 <div class="top-head-w3ls py-2 bg-dark">
     <div class="container">
         <div class="row">
-            <h1 class="text-capitalize text-white col-6">
-</h1>
+          
+                <p class="text-white col-6">
+                    <a class="text-white" href="~/Video">Video</a> |
+                    <a class="text-white" href="#">Hình ảnh</a>
+                </p>
+
             <!-- social icons -->
             <div class="social-icons text-right col-6">
                 <ul class="list-unstyled">
